# pulumi-aws-py-eks-nginx

./: Makefile  Pulumi.yaml  __main__.py  kubeconfig.py  pyproject.toml  requirements.in  requirements.txt  vpc.py
