[tool.poetry]
name = "aws-py-eks-nginx"
version = "0.1.0"
description = ""
authors = ["Kyle Pitzen <kpitzen@pulumi.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pulumi = ">=3.0.0,<4.0.0"
pulumi-aws = "^5.10.0"
pulumi-kubernetes = "^3.20.2"
pip-tools = "^6.8.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
